--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "css-loader": "^3.0.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-lines-ellipsis": "^0.14.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "sass-loader": "^7.1.0",
+    "sass-rem": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
